--- a/contatosstyle.css
+++ b/contatosstyle.css
@@ -69,9 +69,8 @@ body {
     text-transform: inherit;
   }
   .navbar-menu li:hover{
-    background-color: var(--cor-secundaria);
-    
-    
+    text-decoration: underline;
+    text-decoration-color: orange;
   }
   .navbar-menu li a:hover{
     color: black;
