--- a/indexstyle.css
+++ b/indexstyle.css
@@ -13,7 +13,7 @@
   section,
   summary 
   {
-  display:block;
+  display: block;
 }
 
 :root {
@@ -46,7 +46,7 @@ body {
   }
   /* Chamei a logo pelo id para poder separar do menu */
   #logo {
-   padding-right:530px;
+   padding-right:1080px;
    
    
   }
@@ -69,30 +69,32 @@ body {
     text-transform: inherit;
   }
   .navbar-menu li:hover{
-    text-decoration: underline;
-    text-decoration-color: orange;
+    background-color: var(--cor-secundaria);
+    
+    
   }
   .navbar-menu li a:hover{
     color: black;
   }
   .foto{
     justify-content: center;
-    padding-left: 390px;
+    padding-left: 600px;
+    padding-top: 150px;
     padding-bottom: 60px;
     position: relative;
   }
   .foto h1{
     font-size: 50px;
     float: right;
-    padding-right: 300px;
-    padding-top: 30px;
+    padding-right: 550px;
+    padding-top: 5px;
     
   }
   aside{
   float: right;
   position: absolute;
   padding-top: 85px;
-  padding-left: 440px;
+  padding-left: 500px;
   font-size: 15px;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
@@ -106,15 +108,8 @@ body {
   padding-right: 60px;
  }
   
+  
+  footer{ background-color:var(--cor-secundaria);height: 400px; padding-top: 400px;}
   html{
     overflow-y: hidden;
   }
-
-  footer{  
-    background-color:var(--cor-secundaria);
-    width: 100%;
-    height: 20px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-}
