--- a/produtosstyle.css
+++ b/produtosstyle.css
@@ -46,7 +46,7 @@ body {
   }
   /* Chamei a logo pelo id para poder separar do menu */
   #logo {
-   padding-right:530px;
+   padding-right:1080px;
    
    
   }
@@ -69,8 +69,9 @@ body {
     text-transform: inherit;
   }
   .navbar-menu li:hover{
-    text-decoration: underline;
-    text-decoration-color: orange;
+    background-color: var(--cor-secundaria);
+    
+    
   }
   .navbar-menu li a:hover{
     color: black;
@@ -82,33 +83,33 @@ body {
   
   #capuccino {
  float: inline-start;
- padding-left: 220px;
- padding-top: 10px;
- padding-right: 45px;
+ padding-left: 350px;
+ padding-top: 80px;
+ padding-right: 80px;
   }
   #chocolate{
-    padding-right: 42px;
+    padding-right: 80px;
   }
   #moka{
-    padding-right: 35px;
+    padding-right: 80px;
   }
   #frapuccino{
-    padding-right: 35px;
+    padding-right: 80px;
   }
   #shake{
-    padding-right: 50px;
+    padding-right: 200px;
   }
   #tortas{
-    padding-left: 220px;
-    padding-right: 32px;
+    padding-left: 350px;
+    padding-right: 80px;
     padding-bottom: 20px;
   }
   #cookies{
-    padding-right: 20px;
+    padding-right: 30px;
     padding-bottom: 20px;
   }
   #bolos{
-    padding-right: 35px;
+    padding-right: 80px;
     padding-bottom: 15px;
   }
   #expresso{
@@ -117,7 +118,7 @@ body {
 
   }
   #donuts{
-    padding-right: 45px;
+    padding-right: 100px;
     padding-bottom: 20px;
   }
   
